--- a/workflow-templates/awaze-organisation-ci.yml
+++ b/workflow-templates/awaze-organisation-ci.yml
@@ -7,7 +7,16 @@ on:
     branches: [ $default-branch ]
 
 jobs:
-  build:
+  build-dev:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Run a one-line script
+        run: echo Hello from Octo Organization
+        
+  build-pprod:
     runs-on: ubuntu-latest
 
     steps:
