--- a/workflow-templates/awaze-organisation-ci.yml
+++ b/workflow-templates/awaze-organisation-ci.yml
@@ -6,6 +6,9 @@ on:
   pull_request:
     branches: [ $default-branch ]
 
+  # Allows you to run this workflow manually from the Actions tab
+  workflow_dispatch:
+
 jobs:
   build-dev:
     runs-on: ubuntu-latest
@@ -15,7 +18,7 @@ jobs:
 
       - name: Run a one-line script
         run: echo Hello from Octo Organization
-        
+
   build-pprod:
     runs-on: ubuntu-latest
 
