--- a/workflow-templates/awaze-organisation-ci.yml
+++ b/workflow-templates/awaze-organisation-ci.yml
@@ -20,6 +20,7 @@ jobs:
         run: echo Hello from Octo Organization
 
   build-pprod:
+    needs: build-dev
     runs-on: ubuntu-latest
 
     steps:
@@ -29,6 +30,7 @@ jobs:
         run: echo Hello from Octo Organization
 
   build-prod:
+    needs: build-pprod
     runs-on: ubuntu-latest
 
     steps:
