--- a/workflow-templates/awaze-organisation-ci.yml
+++ b/workflow-templates/awaze-organisation-ci.yml
@@ -11,6 +11,7 @@ on:
 
 jobs:
   build-dev:
+    environment: dev
     runs-on: ubuntu-latest
 
     steps:
@@ -20,6 +21,7 @@ jobs:
         run: echo Hello from Octo Organization
 
   build-pprod:
+    environment: preprod
     needs: build-dev
     runs-on: ubuntu-latest
 
@@ -30,6 +32,7 @@ jobs:
         run: echo Hello from Octo Organization
 
   build-prod:
+    environment: prod
     needs: build-pprod
     runs-on: ubuntu-latest
 
