--- a/.github/workflows/create-semantic-release.yml
+++ b/.github/workflows/create-semantic-release.yml
@@ -29,6 +29,7 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.17.5'
+          check-latest: true
       - name: Install dependencies
         working-directory: .
         run: npm install
