--- a/workflow-templates/mfe-build-and-deploy.yml
+++ b/workflow-templates/mfe-build-and-deploy.yml
@@ -15,7 +15,14 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
+      - name: Restore previous run result
+        id: run-result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'restore_result'
+      
       - name: Checkout, Build and Push Docker Image
+        if: steps.run-result.outputs.run-result != 'success'
         uses: awazevr/mfe-docker-build-push-action@v1.0.33
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -25,13 +32,25 @@ jobs:
           pat-token: ${{ secrets.PAT_TOKEN }}
           ecr-repository: 'dev-age-${{ env.APP_NAME }}'
           build-only: false
+        
+      - name: Record run result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'record_result'
 
   publish_static_assets:
     environment: static assets
     runs-on: ubuntu-latest
     needs: [build_and_push_image]
     steps:
+      - name: Restore previous run result
+        id: run-result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'restore_result'
+        
       - name: Publish static assets
+        if: steps.run-result.outputs.run-result != 'success'
         uses: awazevr/mfe-publish-static-assets-action@v1.0.6
         with:
           submodules-pat: ${{ secrets.SUBMODULE_PAT_TOKEN }}
@@ -39,6 +58,11 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-2
           app-name: ${{ env.APP_NAME }}
+          
+      - name: Record run result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'record_result'
 
   deploy_dev:
     environment: dev
@@ -46,7 +70,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_and_push_image, publish_static_assets]
     steps:
+      - name: Restore previous run result
+        id: run-result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'restore_result'
+    
       - name: Deploy dev
+        if: steps.run-result.outputs.run-result != 'success'
         uses: awazevr/mfe-deploy-action@v1.0.11
         with:
           app-name: ${{ env.APP_NAME }}
@@ -60,6 +91,11 @@ jobs:
           new-relic-region: ${{ secrets.NEW_RELIC_REGION }}
           new-relic-application-id: ${{ secrets.NEW_RELIC_APPLICATION_ID }}
           new-relic-account-id: ${{ secrets.NEW_RELIC_ACCOUNT_ID }}
+      
+      - name: Record run result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'record_result'
 
   deploy_pprd:
     environment: pprd
@@ -67,7 +103,14 @@ jobs:
     runs-on: ubuntu-latest
     needs: [build_and_push_image, publish_static_assets, deploy_dev]
     steps:
+      - name: Restore previous run result
+        id: run-result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'restore_result'
+        
       - name: Deploy pprd
+        if: steps.run-result.outputs.run-result != 'success'
         uses: awazevr/mfe-deploy-action@v1.0.11
         with:
           app-name: ${{ env.APP_NAME }}
@@ -82,6 +125,11 @@ jobs:
           new-relic-region: ${{ secrets.NEW_RELIC_REGION }}
           new-relic-application-id: ${{ secrets.NEW_RELIC_APPLICATION_ID }}
           new-relic-account-id: ${{ secrets.NEW_RELIC_ACCOUNT_ID }}
+          
+      - name: Record run result
+        uses: awazevr/restore-previous-run-result-action@v1.0.8
+        with:
+          action: 'record_result'
     
   deploy_prd:
     environment: prd
@@ -105,3 +153,4 @@ jobs:
           new-relic-region: ${{ secrets.NEW_RELIC_REGION }}
           new-relic-application-id: ${{ secrets.NEW_RELIC_APPLICATION_ID }}
           new-relic-account-id: ${{ secrets.NEW_RELIC_ACCOUNT_ID }}
+
